# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,18 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import usersRouter from "./users";
+import postsRouter from "./posts";
+import followsRouter from "./follows";
+import feedRouter from "./feed";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(authRouter);
+router.use(usersRouter);
+router.use(postsRouter);
+router.use(followsRouter);
+router.use(feedRouter);
 
 export default router;
